force-app/main/default/objects/Landing_Number_To_Campaign__c/Landing_Number_To_Campaign__c.object-meta.xml
<CustomObject>
    <label>Landing Number To Campaign</label>
    <nameField>
        <displayFormat>LTC - {0000}</displayFormat>
        <label>Landing Number To Campaign Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Landing Number To Campaign</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>