force-app/main/default/objects/Landing_Number_To_Campaign__c/fields/Campaign__c.field-meta.xml
<CustomField>
    <fullName>Campaign__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Campaign</label>
    <referenceTo>Campaign</referenceTo>
    <relationshipLabel>Landing Number To Campaign</relationshipLabel>
    <relationshipName>Landing_Number_To_Campaign</relationshipName>
    <type>Lookup</type>
</CustomField>