force-app/main/default/objects/Landing_Number_To_Campaign__c/fields/Is_Campaign_Active__c.field-meta.xml
<CustomField>
    <fullName>Is_Campaign_Active__c</fullName>
    <formula>Campaign__r.IsActive</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Campaign Active</label>
    <type>Checkbox</type>
</CustomField>