force-app/main/default/objects/Landing_Number_To_Campaign__c/fields/Landing_Number__c.field-meta.xml
<CustomField>
    <fullName>Landing_Number__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Landing Number</label>
    <referenceTo>Landing_Number__c</referenceTo>
    <relationshipLabel>Landing Number To Campaign</relationshipLabel>
    <relationshipName>Landing_Number_To_Campaign</relationshipName>
    <type>Lookup</type>
</CustomField>