force-app/main/default/objects/Landing_Number_To_Campaign__c/fields/Landing_NumberFor__c.field-meta.xml
<CustomField>
    <fullName>Landing_NumberFor__c</fullName>
    <formula>Landing_Number__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Landing Number</label>
    <type>Text</type>
</CustomField>